# llvm-static-instruction-counter-pass

./: CMakeLists.txt  InstructionCount.cpp  README.md
InstructionCount/: CMakeLists.txt  CostRelation.cpp  CostRelation.hpp  Expression.cpp  Expression.hpp  ICAnalyses.cpp  ICAnalyses.hpp  InstructionCount.cpp  InstructionCount.hpp
examples/: CMakeLists.txt  config.yaml  example.cpp  fibonacci.cpp  main.yaml  nested.cpp  sycl_add.cpp
examples/energy_models/: all_ones.txt  test_model.txt
